--- a/build.gradle
+++ b/build.gradle
@@ -13,3 +13,7 @@ dependencies {
     testCompile group: 'junit', name: 'junit', version: '4.11'
 }
 
+task executeCommandLineApp(type: JavaExec) {
+    main = "com.vmgarcia.ticketservice.CommandLineTicketService"
+    classpath = sourceSets.main.runtimeClasspath
+}
