--- a/build.gradle
+++ b/build.gradle
@@ -13,7 +13,10 @@ dependencies {
     testCompile group: 'junit', name: 'junit', version: '4.11'
 }
 
-task executeCommandLineApp(type: JavaExec) {
-    main = "com.vmgarcia.ticketservice.CommandLineTicketService"
-    classpath = sourceSets.main.runtimeClasspath
+
+
+jar {
+    manifest {
+        attributes "Main-Class": 'com.vmgarcia.ticketservice.CommandLineTicketService'
+    }
 }
