--- a/build.gradle
+++ b/build.gradle
@@ -2,8 +2,9 @@ group 'com.vmgarcia.ticketservice'
 version '1.0-SNAPSHOT'
 
 apply plugin: 'java'
-
+apply plugin: 'application'
 sourceCompatibility = 1.8
+mainClassName = "com.vmgarcia.ticketservice.CommandLineTicketService"
 
 repositories {
     mavenCentral()
@@ -15,8 +16,3 @@ dependencies {
 
 
 
-jar {
-    manifest {
-        attributes "Main-Class": 'com.vmgarcia.ticketservice.CommandLineTicketService'
-    }
-}
